@@ -17,15 +17,15 @@ What is this?
   web server, a telnet server, a multiplayer RPG engine, a generic client and
   server for remote object access, and APIs for creating new protocols and
   services. Twisted supports integration of the Tk, GTK  or wxPython event loop
-  with its main event loop. It also has basic support for running servers on 
-  top of Jython.
+  with its main event loop. The Win32 event loop is also supported, as is
+  basic support for running servers on top of Jython.
 
   Twisted currently supports the following protocols, all implemented in pure
   python, most of them as both servers and clients:
   
     - FTP
     - HTTP
-    - SOCKS
+    - SOCKSv4
     - SMTP
     - IRC
     - telnet
