@@ -1,3 +1,7 @@
+2002-03-05  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>
+
+        * New win32 event loop, written by Andrew Bennetts.
+
 2002-03-04  Moshe Zadka  <moshez@twistedmatrix.com>
 
 	* twisted/web/server.py: authorizer.Unauthorized->util.Unauthorized
